WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
83548
Pass FontDescription as const reference instead of by value in CSSStyleSelector.h.
https://bugs.webkit.org/show_bug.cgi?id=83548
Summary
Pass FontDescription as const reference instead of by value in CSSStyleSelect...
Luke Macpherson
Reported
2012-04-09 22:10:43 PDT
Pass FontDescription as const reference instead of by value in CSSStyleSelector.h.
Attachments
Patch
(2.24 KB, patch)
2012-04-09 22:12 PDT
,
Luke Macpherson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Luke Macpherson
Comment 1
2012-04-09 22:12:08 PDT
Created
attachment 136397
[details]
Patch
WebKit Review Bot
Comment 2
2012-04-10 12:31:23 PDT
Comment on
attachment 136397
[details]
Patch Clearing flags on attachment: 136397 Committed
r113752
: <
http://trac.webkit.org/changeset/113752
>
WebKit Review Bot
Comment 3
2012-04-10 12:31:27 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug