Pass FontDescription as const reference instead of by value in CSSStyleSelector.h. https://bugs.webkit.org/show_bug.cgi?id=83548

Reviewed by Kentaro Hara.

FontDescription is relatively large, so pass-by-reference is preferred.

No new tests / code cleanup only.

* css/CSSStyleSelector.h:
(WebCore::CSSStyleSelector::fontDescription):
(WebCore::CSSStyleSelector::parentFontDescription):
(WebCore::CSSStyleSelector::setFontDescription):


Canonical link: https://commits.webkit.org/101056@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@113752 268f45cc-cd09-0410-ab3c-d52691b4dbfc